# test-repo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CICD_SETUP_GUIDE.md  DEVSECOPS_ASSESSMENT.md  DEVSECOPS_QUICKSTART.md  Dockerfile  HELM-REGISTRY-SETUP.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  PIPELINE-IMPROVEMENTS-MASTER.md  PIPELINE_LIBRARY_SETUP.md  PIPELINE_REUSE_GUIDE.md  PIPELINE_SIMULATOR.md  PIPELINE_VARIABLES.md  README.md  REPOSITORY_IMPROVEMENT_REPORT.md  REUSABLE-PIPELINES.md  REUSABLE_PIPELINES_GUIDE.md  REUSABLE_PIPELINES_SUMMARY.md  bitbucket-pipelines-devsecops.yml  bitbucket-pipelines-using-pipes.yml  bitbucket-pipelines-using-toolbox.yml  bitbucket-pipelines.yml  pom.xml  simulate-pipeline.sh
.pipeline-library/: README.md
.pipeline-library/docker/devsecops-toolbox/: Dockerfile  README.md  build-and-push.sh
.pipeline-library/pipes/secrets-scan/: Dockerfile  README.md  common.sh  pipe.sh  pipe.yml
bitbucket-pipes/: .gitignore  README.md
bitbucket-pipes/build-pipe/: Dockerfile  README.md  pipe.sh  pipe.yml
bitbucket-pipes/deploy-pipe/: README.md  pipe.yml
bitbucket-pipes/docker-pipe/: Dockerfile
bitbucket-pipes/helm-pipe/: Dockerfile
bitbucket-pipes/lint-pipe/: Dockerfile  README.md  pipe.sh  pipe.yml
bitbucket-pipes/notify-pipe/: Dockerfile  README.md  pipe.sh  pipe.yml
bitbucket-pipes/quality-pipe/: pipe.sh  pipe.yml
bitbucket-pipes/security-pipe/: Dockerfile
bitbucket-pipes/slack-pipe/: Dockerfile  README.md  pipe.sh  pipe.yml
bitbucket-pipes/test-pipe/: Dockerfile  README.md  pipe.sh  pipe.yml
docs/: DEPLOYMENT-ENVIRONMENTS.md  PIPELINE-REUSABILITY.md  PIPELINE-TEMPLATES.md  README.md  REUSABLE-PIPELINES.md  ROLLBACK-PROCEDURES.md
examples/: README.md
examples/dotnet/: README.md  bitbucket-pipelines.yml
examples/golang/: README.md  bitbucket-pipelines.yml
examples/java-gradle/: README.md  bitbucket-pipelines.yml
examples/java-maven/: README.md  bitbucket-pipelines.yml  helm-values-example.yaml
examples/nodejs/: README.md  bitbucket-pipelines.yml
examples/php/: README.md  bitbucket-pipelines.yml
examples/python/: .pre-commit-config.yaml  PIPELINE-IMPROVEMENTS.md  README.md  bitbucket-pipelines-improved.yml  bitbucket-pipelines.yml  helm-values-dev.yaml  helm-values-production.yaml  helm-values-staging.yaml  pyproject.toml
examples/ruby/: README.md  bitbucket-pipelines.yml
examples/rust/: README.md  bitbucket-pipelines.yml
helm-chart/: .gitignore  .helmignore  Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values-stage.yaml  values.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  certificate.yaml  configmap.yaml  cronjob.yaml  deployment.yaml  destinationrule.yaml  externalsecret.yaml  networkpolicy.yaml  pdb.yaml  prometheusrule.yaml  pvc.yaml  scaledobject.yaml  secret.yaml  service-headless.yaml  service.yaml  servicemonitor.yaml  virtualservice.yaml  vpa.yaml
pipeline-templates/: README.md  REUSABILITY.md  dotnet-template.yml  golang-template.yml  java-gradle-template.yml  java-maven-template.yml  nodejs-template.yml  php-template.yml  python-reusable-template.yml  python-template.yml  ruby-template.yml  rust-template.yml  universal-template.yml
pipeline-templates/examples/: customized-python-usage.yml  minimal-python-usage.yml
scripts/: README.md  build.sh  deploy-dev.sh  deploy-prod.sh  deploy-production.sh  deploy-stage.sh  deploy-staging.sh  docker-build.sh  docker-scan.sh  helm-package.sh  integration-test.sh  package.sh  quality.sh  security-dockerfile-scan.sh  security-iac-scan.sh  security-sbom-generate.sh  security-sca-scan.sh  security-secrets-scan.sh  test.sh
(+25 files in other folders)
